# session_notify_server

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  logging.json  pyproject.toml
app/: __init__.py  certs.py  hook_policy.py  hub.py  logging_setup.py  main.py  network.py  schemas.py  security.py  storage.py
protocol/: openapi.yaml  ws-events.schema.json
scripts/: generate_self_signed_cert.ps1  generate_self_signed_cert.sh  reset_devices.py  run_dev_server.ps1  run_dev_server.sh  send_test_notification.py
tests/: conftest.py  test_api.py  test_logging_setup.py
